--------------------------------------------------------------------------------
shmuel 2023-11-13 20:19:31+02:00 - build 6211

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-11-11 23:43:42+00:00 - build 6210

1. M#4019: restore elevation requests for network paths

2. gh-747: Build 6209 crashes on start with the profile from build 5629.

3. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-11-07 01:48:43+00:00 - build 6209

1. Correction of 6204.

--------------------------------------------------------------------------------
drkns 2023-11-06 18:35:45+00:00 - build 6208

1. Refactoring.

2. Clang:
   - Fix build
   - Fix warnings
   - Remove outdated workarounds
   - Bump version

3. Clarification of "black on black - default color" logic in Files highlighting:
   black on black is now considered "default" (or "transparent") only when both
   foreground and background are fully opaque.
   If you noticed a sudden black color somewhere where it shouldn't be - make sure
   that both foreground and background are either fully opaque or fully transparent,
   either via the UI or:
   1. export the config
   2. search for:   background="00000000" foreground="FF000000"
      replace with: background="00000000" foreground="00000000"
   3. save and import.

--------------------------------------------------------------------------------
yjh 2023-11-02 09:24:30+03:00 - build 6207

1. SQLite v3.44.0

--------------------------------------------------------------------------------
drkns 2023-10-29 01:30:01+01:00 - build 6206

1. gh-741: Far regular expressions - performance.

--------------------------------------------------------------------------------
drkns 2023-10-26 18:32:38+01:00 - build 6205

1. Fix 5199.

--------------------------------------------------------------------------------
drkns 2023-10-13 22:09:02+01:00 - build 6204
