@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+shmuel 2023-11-14 23:04:38+02:00 - build 6212
+
+1. Fix Macro Settings dialog.
+
+--------------------------------------------------------------------------------
 shmuel 2023-11-13 20:19:31+02:00 - build 6211
 
 1. Refactoring.
